--- a/webapi-service/src/main/resources/application.properties
+++ b/webapi-service/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 # session
 spring.session.store-type=redis
+# dao
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+mybatis.mapper-locations=classpath:mapper/*.xml
 # sms
 sms.aliyun.accessKeyId=LTAIO8TDbxzjWTSl
 sms.aliyun.accessSecret=LYkMHwdvJaR0ixSptOpcf6JDr9Zbwq
