--- a/webapi-common/src/main/resources/application.properties
+++ b/webapi-common/src/main/resources/application.properties
@@ -1,6 +1,25 @@
+# log
+logging.config=classpath:logback.xml
 # session
 spring.session.store-type=redis
-# \u6846\u67B6\u914D\u7F6E \u9632CSRF\u653B\u51FB\u7684\u5F00\u5173\uFF0C\u5EFA\u8BAE\u5F00\u53D1\u73AF\u5883\u5173\u95ED\uFF0C\u751F\u4EA7\u73AF\u5883\u5F00\u542F
+# dao
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+mybatis.mapper-locations=classpath:mapper/*.xml
+# sms \u76F8\u5173\u53C2\u6570\u8BF7\u81EA\u5DF1\u53BB\u963F\u91CC\u4E91\u5E73\u53F0\u7533\u8BF7
+sms.aliyun.accessKeyId=LTAIO8TDbxzjWTSl
+sms.aliyun.accessSecret=LYkMHwdvJaR0ixSptOpcf6JDr9Zbwq
+sms.aliyun.verifycode.templateCode=SMS_78565021
+sms.aliyun.verifycode.signName=\u5154\u516B\u54E5
+# \u6846\u67B6\u914D\u7F6E \u9632CSRF\u653B\u51FB\u7684\u5F00\u5173\uFF0C\u5F00\u53D1\u73AF\u5883\u63A5\u53E3\u6D4B\u8BD5\u65F6\u53EF\u5173\u95ED\uFF0C\u751F\u4EA7\u73AF\u5883\u5F00\u542F
 csrf.on=false
 # \u6846\u67B6\u914D\u7F6E //TODO \u81EA\u52A8\u767B\u5F55\u4E5F\u505A\u6210\u5F00\u5173\uFF0C\u51CF\u5C11\u6570\u636E\u5B58\u50A8
 atuologin.on=true
