--- a/webapi-controller/pom.xml
+++ b/webapi-controller/pom.xml
@@ -14,7 +14,12 @@
     <dependencies>
         <dependency>
             <groupId>com.tubugs</groupId>
-            <artifactId>webapi-service</artifactId>
+            <artifactId>webapi-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tubugs</groupId>
+            <artifactId>webapi-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
