--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
                 <artifactId>shiro-spring</artifactId>
                 <version>1.4.0</version>
             </dependency>
+            <!--elk-->
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>4.11</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
