--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>webapi-common</module>
         <module>webapi-dao</module>
         <module>webapi-controller</module>
+        <module>webapi-service</module>
     </modules>
 
     <dependencyManagement>
@@ -78,6 +79,22 @@
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-core</artifactId>
                 <version>3.2.5</version>
+            </dependency>
+            <!--webapi-->
+            <dependency>
+                <groupId>com.tubugs</groupId>
+                <artifactId>webapi-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tubugs</groupId>
+                <artifactId>webapi-dao</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tubugs</groupId>
+                <artifactId>webapi-service</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
