--- a/webapi-common/src/main/resources/application.properties
+++ b/webapi-common/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.timeout=0
 # \u65E5\u5FD7
 logging.config=classpath:logback.xml
 # \u4F1A\u8BDD\u6301\u4E45\u5316
@@ -7,6 +17,8 @@ sms.aliyun.accessKeyId=LTAIO8TDbxzjWTSl
 sms.aliyun.accessSecret=LYkMHwdvJaR0ixSptOpcf6JDr9Zbwq
 sms.aliyun.verifycode.templateCode=SMS_78565021
 sms.aliyun.verifycode.signName=\u5154\u516B\u54E5
+# \u6587\u4EF6\u670D\u52A1
+file.localfile.root=D:
 # \u63A8\u9001\u670D\u52A1\uFF0C\u963F\u91CC\u4E91\u63A8\u9001\u670D\u52A1\uFF0C\u76F8\u5173\u53C2\u6570\u9700\u8981\u53BB\u963F\u91CC\u4E91\u7533\u8BF7 https://www.aliyun.com/product/cps
 push.aliyun.accessKeyId=LTAIO8TDbxzjWTSl
 push.aliyun.accessSecret=LYkMHwdvJaR0ixSptOpcf6JDr9Zbwq
