--- a/webapi-controller/src/main/resources/application-prod.properties
+++ b/webapi-controller/src/main/resources/application-prod.properties
@@ -23,7 +23,15 @@ spring.datasource.minIdle=5
 spring.datasource.maxActive=20
 spring.datasource.maxWait=60000
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+mapper.mappers=com.tubugs.springboot.dao.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
 # \u65E5\u5FD7
 logging.config=classpath:logback.xml
 # \u4F1A\u8BDD\u6301\u4E45\u5316
