--- a/webapi-dao/src/main/resources/application.properties
+++ b/webapi-dao/src/main/resources/application.properties
@@ -11,4 +11,12 @@ spring.datasource.minIdle=5
 spring.datasource.maxActive=20
 spring.datasource.maxWait=60000
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+mapper.mappers=com.tubugs.springboot.dao.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
